# PandAOSsh

./: .gitignore  CMakeLists.txt  README.md  config_machine.json  phase3_config_machine.json  phase3_sys6_config.json  phase3_test_config.json  scelte_implementative.md  term0.uriscv
documentazione/: AUTHOR  guida_interrogazione.aux  guida_interrogazione.out  guida_interrogazione.tex  guida_interrogazione.toc  scelte_implementativ2.md  scelte_implementative3.md
documentazione/interrogazione/: fase1_strutture_dati.tex  fase2_nucleus.tex  fase3_support_level.tex
headers/: const.h
phase1/: asl.c  asl_test  pcb.c  test_asl_manuale.c
phase1/headers/: asl.h
phase1_submit/phase1/: asl.c  pcb.c
phase2/: debug.c  debug.h  exceptions.c  initial.c  interrupts.c  p2test.c  p2test_orig.c  scheduler.c
phase2/headers/: globals.h
phase3/: initProc.c  sysSupport.c  vmSupport.c
phase3/headers/: support.h
testers/: Makefile  calc.c  calc.elf.aout.uriscv  calc.uriscv  crtsi.S  date.c  echo.c  fibEight.c  fibEleven.c  proc_a.c  proc_a.elf.aout.uriscv  proc_a.uriscv  proc_b.c  proc_b.elf.aout.uriscv  proc_b.uriscv  shell.c  sl.c  test0  test0.c  test0.elf.aout.uriscv  test0.uriscv  uname.c
testers/h/: libuser.h
